--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require-dev": {
         "phpstan/phpstan": "^0.11.15",
         "phpstan/phpstan-strict-rules": "^0.11.1",
+        "sentry/sdk": "^2.0",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "suggest": {
