--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
-    "name": "geo6/zend-expressive-monolog",
+    "name": "geo6/mezzio-monolog",
     "type": "library",
-    "description": "Zend Expressive Monolog ErrorHandler",
+    "description": "Mezzio Monolog ErrorHandler",
     "license": "GPL-3.0-or-later",
     "require": {
-        "monolog/monolog": "^1.24",
-        "zendframework/zend-expressive": "^3.2",
-        "zendframework/zend-servicemanager": "^3.4"
+        "monolog/monolog": "^1.24 || ^2.0",
+        "mezzio/mezzio": "^3.2",
+        "laminas/laminas-servicemanager": "^3.4",
+        "laminas/laminas-dependency-plugin": "^2.1"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.15",
-        "phpstan/phpstan-strict-rules": "^0.11.1",
-        "sentry/sdk": "^2.0",
+        "phpstan/phpstan": "^0.12.56",
+        "phpstan/phpstan-strict-rules": "^0.12.5",
+        "sentry/sdk": "^3.0",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "suggest": {
@@ -22,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Geo6\\Expressive\\Monolog\\": "src/"
+            "Geo6\\Mezzio\\Monolog\\": "src/"
         }
     },
     "scripts": {
