🚨 Update phpstan.installer.neon

--- a/phpstan.installer.neon
+++ b/phpstan.installer.neon
@@ -3,3 +3,4 @@ includes:
     - vendor/phpstan/phpstan-strict-rules/rules.neon
 parameters:
     reportUnmatchedIgnoredErrors: true
+    checkMissingIterableValueType: false
